# icewm

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  Makefile  NEWS.md  README.md  VERSION  autogen.sh  configure  configure.ac  icewm.lsm  icewm.spec  icewm_1.3.7.orig.tar.gz.delta  icewm_1.3.7.orig.tar.gz.id  icewm_1.3.8+githubmod++20150818+4cda2e8.orig.tar.xz.delta  icewm_1.3.8+githubmod++20150818+4cda2e8.orig.tar.xz.id  icewm_1.3.8+githubmod+20150310+31bfd46.orig.tar.xz.delta  icewm_1.3.8+githubmod+20150310+31bfd46.orig.tar.xz.id  icewm_1.3.8+githubmod+20150412+960629d.orig.tar.xz.delta  icewm_1.3.8+githubmod+20150412+960629d.orig.tar.xz.id  icewm_1.3.8+githubmod+20150818+ad97152.orig.tar.xz.delta  icewm_1.3.8+githubmod+20150818+ad97152.orig.tar.xz.id  icewm_1.3.8+githubmod+20150914+fa3fdef.orig.tar.xz.delta  icewm_1.3.8+githubmod+20150914+fa3fdef.orig.tar.xz.id  icewm_1.3.8+mod+20151227.orig.tar.xz.delta  icewm_1.3.8+mod+20151227.orig.tar.xz.id  icewm_1.3.8+mod+20160825.orig.tar.xz.delta  icewm_1.3.8+mod+20160825.orig.tar.xz.id  icewm_1.3.8+mod+20160906.orig.tar.xz.delta  icewm_1.3.8+mod+20160906.orig.tar.xz.id  icewm_1.3.8+mod+20161220.orig.tar.xz.delta  icewm_1.3.8+mod+20161220.orig.tar.xz.id  icewm_1.3.8.orig.tar.xz.delta  icewm_1.3.8.orig.tar.xz.id  icewm_1.4.1+mod+20170728.orig.tar.xz.delta  icewm_1.4.1+mod+20170728.orig.tar.xz.id  icewm_1.4.2+mod+20170808.orig.tar.xz.delta  icewm_1.4.2+mod+20170808.orig.tar.xz.id  icewm_1.4.3+mod+20170823.orig.tar.xz.delta  (+138 more)
contrib/: Additional_Categories.csv  conv_cat.pl  icewm-menu-xrandr  menuprog-xrandr
debian/: NEWS  README.Debian  README.cfg  changelog  control  copyright  gbp.conf  icewm-common.doc-base.icewm-faq  icewm-common.docs  icewm-common.examples  icewm-common.install  icewm-common.links  icewm-common.preinst  icewm-experimental.links  icewm-lite.1  icewm-lite.links  icewm.install  icewm.links  icewm.prerm  rules
debian/custom/: menu
debian/examples/: menu  startup
debian/patches/: debian_defaults  format_buffer_overflow  ifstate_exact_check  imap_unseen  lite_linking  misc_fixes  package_build_fixes  safe_get_argument  series
debian/source/: options
doc/: icewm-10.html  icewm-3.html
lib/: keys.in  menu  menu.in  toolbar.in  winoptions.in
patches/: package_build_fixes  series
po/: CMakeLists.txt  Makefile  de.po
source/: options
src/: CMakeLists.txt  Makefile  aaddressbar.cc  aapm.cc  aclock.cc  acpustatus.cc  akeyboard.cc  amailbox.cc  amemstatus.cc  apppstatus.cc  apppstatus.h  atasks.cc  base.h  config.cmake.h.in  config.h  default.h  fdomenu.cc  fdospecgen.h  globit.cc  globit.h  icehelp.cc  icelist.cc  icesh.cc  icesound.cc  icetray.cc  icewmbg.cc  logevent.cc  logevent.h  misc.cc  mregex.cc  mstring.cc  mstring.h  mstringex.cc  mstringex.h  strtest.cc  themable.h  themes.cc  udir.h  upath.cc  upath.h  (+52 more)
